@@ -5,7 +5,7 @@
 
 EAPI=6
 
-inherit cmake-utils flag-o-matic
+inherit cmake-utils eutils
 
 COMMIT_ID="646bede3d9ec0acf0ae378415edac136774a66c5"
 MY_P="EmulationStation"
@@ -18,7 +18,7 @@ SRC_URI="https://github.com/Aloshi/${MY_P}/archive/${COMMIT_ID}.zip
 LICENSE="MIT"
 SLOT="0"
 KEYWORDS="~amd64"
-IUSE="gba wii gamecube n64 nes snes atari2600"
+IUSE=""
 
 PATCHES="${FILESDIR}/emulationstation-2.0.1a-system-pugixml.patch
 	${FILESDIR}/emulationstation-2.0.1a-cxxflags.patch"
@@ -32,21 +32,18 @@ DEPEND="
 	media-libs/freetype:2
 	media-libs/libsdl2
 	net-misc/curl[ssl]
-	virtual/opengl
-	"
-RDEPEND="${DEPEND}
-	wii? ( games-emulation/dolphin )
-	gamecube? ( games-emulation/dolphin )
-	n64? ( games-emulation/mupen64plus )
-	nes? ( games-emulation/mednafen )
-	snes? ( games-emulation/zsnes )
-	atari2600? ( games-emulation/stella )
-	gba? ( || (
-		games-emulation/visualboyadvance
-		games-emulation/mednafen
-		) )"
+	virtual/opengl"
+RDEPEND="${DEPEND}"
 
 src_unpack() {
 	default
 	mv ${MY_P}-* ${P} || die
+}
+
+src_install() {
+	cmake-utils_src_install
+
+	newicon data/resources/window_icon_256.png ${PN}.png
+
+	make_desktop_entry ${PN} EmulationStation ${PN} Game\;Emulator
 }
